--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
+<% layout('layouts/boilerplate') %>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Edit Campground</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Edit Campground</h1>
+    <h1>Edit Campground</h1>
         <form action="/campgrounds/<%= campground._id%>?_method=PUT" method="POST">
         <div>
             <label for="title">Title</label>
@@ -24,6 +14,4 @@
         </form>
 
         <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
-        
-    </body>
-</html>
+ 
