--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Campgrounds</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+<% layout('layouts/boilerplate') %>
         <h1>All Campgrounds</h1>
         <div>
             <a href="/campgrounds/new">New Campground</a>
@@ -19,6 +8,3 @@
                 <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
             <% }%>
         </ul>
-        
-    </body>
-</html>
