--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
+<% layout('layouts/boilerplate')%>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>New Campground</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
         <form action="/campgrounds" method="POST">
         <div>
             <label for="title">Title</label>
@@ -23,6 +13,4 @@
         </form>
 
         <a href="/campgrounds">Back to all campgrounds</a>
-        
-    </body>
-</html>
+    
