--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Show</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+<% layout('layouts/boilerplate')%>
+
         <h1><%= campground.title %></h1>
         <h2><%= campground.location %></h2>
         
@@ -20,7 +7,3 @@
         
         <p><form action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST"><button>Delete</button></form></p>
 
-
-        <script src="" async defer></script>
-    </body>
-</html>
